hphp/hack/test/typecheck/akshape/nested_dynamic_index_lvalue.php.exp
File "nested_dynamic_index_lvalue.php", line 13, characters 3-16:
  ^(array<^(string), ^(string | int)>)
File "nested_dynamic_index_lvalue.php", line 14, characters 15-25:
Invalid argument (Typing[4110])
File "nested_dynamic_index_lvalue.php", line 17, characters 22-27:
This is a string
File "nested_dynamic_index_lvalue.php", line 10, characters 17-17:
It is incompatible with an int
